fixed minor UI inconsistencies

--- a/projects.html
+++ b/projects.html
@@ -66,15 +66,15 @@
     <div class="projects-hero mb-5">
       <h3 data-text="MY PROJECTS">MY PROJECTS</h3>
     </div>
-    <div class="container center">
+    <div class="projects-container center">
       <div class="row mb-5 mt-5">
         <div class="col d-none d-lg-block">
           <img src="images/samba.png" class="img-fluid" id="project-img" alt="" />
         </div>
         <div class="col">
           <div class="project-description">
-            <h2 class="mb-4">Samba Project</h2>
-            <p class="mb-5 text-muted">
+            <h2 class="mb-3">Samba Project</h2>
+            <p class="mb-3 text-muted">
               This was my first ever SheCodes project in September 2021.
               <br />
               We had to make a basic webpage using HTML and CSS 
@@ -93,8 +93,8 @@
       <div class="row mb-5 mt-5">
         <div class="col">
           <div class="project-description">
-            <h2 class="mb-4">Weather App</h2>
-            <p class="mb-5 text-muted">
+            <h2 class="mb-3">Weather App</h2>
+            <p class="mb-3 text-muted">
              Soon after I enrolled onto SheCodes Pro, which includes the Plus, Responsive and React courses. As part of the Plus workshop I learnt how to code in JavaScript.
              We built a fully functional live weather app adding APIs to update weather and locations in realtime using Vanilla JavaScript. We also learnt how upload all of our code to GitHub, creating respositories and how to host them on Netlify.
 
@@ -117,8 +117,8 @@
         </div>
         <div class="col">
           <div class="project-description">
-            <h2 class="mb-4">Responsive Website</h2>
-            <p class="mb-5 text-muted">
+            <h2 class="mb-3">Responsive Website</h2>
+            <p class="mb-3 text-muted">
               This is not one of my final projects for the Responsive workshop, this portfolio website  you are browsing now is!
               However, before building this website, I made a basic responsive website about croissants using Bootstrap, CSS utilities, Flexbox and made it SEO friendly.
             </p>
@@ -132,7 +132,7 @@
         </div>
       </div>
     </div>
-    <div class="connected mt-5 mb-5 center">
+    <div class="connected mt-5 center">
       <h2 class="mt-5 mb-5">Let's get connected</h2>
       <p>
         I hope you have enjoyed looking at my projects throughout my SheCodes journey.
