--- a/contact.html
+++ b/contact.html
@@ -26,170 +26,127 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style/portfolio.css" />
-    <meta name="description" content="Luisa is an aspiring Software Developer based in the UK. Recently graduated from SheCodes Pro workshop, this page has all of her social platforms and contact details">
+    <meta
+      name="description"
+      content="Luisa is an aspiring Software Developer based in the UK. Recently graduated from SheCodes Pro workshop, this page has all of her social platforms and contact details"
+    />
     <title>Front-End Developer portfolio - Contact Luisa Rua Estrada</title>
   </head>
   <body>
-     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-      <div class="container">
-        <a class="navbar-brand" title="Homepage" href="index.html">Lu 💫</a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarNav"
-          aria-controls="navbarNav"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <div class="nav" id="mynav">
+      <div class="logo">
+        <a href="index.html"> Lu 💫 </a>
+      </div>
+      <ul class="menu-list">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about-me.html">About me</a></li>
+        <li><a href="projects.html">Projects</a></li>
+        <li><a id="nav-link-active" href="contact.html">Contact</a></li>
+      </ul>
+
+      <div class="menu">
+        <div class="line1"></div>
+        <div class="line2"></div>
+        <div class="line3"></div>
+      </div>
+    </div>
+    <div class="contact-hero mb-5">
+      <h1>Get in contact</h1>
+    </div>
+    <div class="container pt-2 pb-5">
+      <div class="mt-5 mb-4">
+        <label for="exampleFormControlInput1" class="form-label">Email:</label>
+        <input
+          type="email"
+          class="form-control"
+          id="exampleFormControlInput1"
+          placeholder="....@email.com"
+        />
+      </div>
+      <div class="mb-4">
+        <label for="exampleFormControlTextarea1" class="form-label"
+          >Message:</label
         >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link" href="index.html" title="Homepage" >Homepage</a
-              >
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="about-me.html" title="About Luisa">About me</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="projects.html" title="Luisa's work">Projects</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="contact.html" title="Contact Luisa">Get in contact</a>
-            </li>
-          </ul>
-        </div>
+        <textarea
+          class="form-control"
+          id="form-control-msg"
+          rows="3"
+          placeholder="Type message here..."
+        ></textarea>
       </div>
-    </nav>
-              <div class="contact-hero mb-5">
-              <h1>Get in contact</h1>
-              </div>
-              <div class="container">
-                <div class="row">
-                  <div class="col-sm-6">
-                    <div class="mb-4">
-                      <label for="exampleFormControlInput1" class="form-label"
-                        >Email:</label
-                      >
-                      <input
-                        type="email"
-                        class="form-control"
-                        id="exampleFormControlInput1"
-                        placeholder="....@email.com"
-                      />
-                    </div>
-                    <div class="mb-4">
-                      <label
-                        for="exampleFormControlTextarea1"
-                        class="form-label"
-                        >Message:</label
-                      >
-                      <textarea
-                        class="form-control"
-                        id="exampleFormControlTextarea1"
-                        rows="3" placeholder="Type message here..."
-                      ></textarea>
-                    </div>
-                    <div>
-                      <a
-                        href="#"
-                        id="submit-btn"
-                        class="btn btn-branding-outline mb-5 float-end"
-                        >Submit</a
-                      >
-                    </div>
-                  </div>
-                  <div class="col-sm-6 pt-5">
-                    <div class="row mb-4">
-                      <div class="col-4">
-                        <i
-                          class="far fa-solid fa-paper-plane icon float-end fa-3x" 
-                          aria-hidden="true"></i>
-                      </div>
-                      <div class="col-6">
-                        <div class="contact-description">Email:</div>
-                        <a href="mailto:luisafre01@gmail.com"
-                          class="contact-link"
-                          >luisafre01@gmail.com</a>
-                      </div>
-                    </div>
-                    <div class="row mb-4">
-                      <div class="col-4">
-                        <i
-                          class="fab fa-linkedin icon float-end fa-3x"
-                          aria-hidden="true"
-                        ></i>
-                      </div>
-                      <div class="col-6">
-                        <div class="contact-description">Linkedin:</div>
-                        <a
-                          href="https://www.linkedin.com/in/luisa-rua-estrada-58b016a7/"
-                          class="contact-link"
-                          target="_blank"
-                          >@luisaruaestrada</a
-                        >
-                      </div>
-                    </div>
-                    <div class="row mb-4">
-                      <div class="col-4">
-                   <i class="fab fa-brands fa-twitter-square icon float-end fa-3x" aria-hidden="true"></i>
-                    </div>
-                      <div class="col-6">
-                        <div class="contact-description">Twitter:</div>
-                        <a
-                          href="https://twitter.com/luloestrada"
-                          class="contact-link"
-                          target="_blank"
-                          >@luloestrada</a>
-                      </div>
-                    </div>
-                    <div class="row mb-4">
-                      <div class="col-4">
-                   <i class="fab fa-brands fa-github icon float-end fa-3x" aria-hidden="true"></i>
-                    </div>
-                      <div class="col-6">
-                        <div class="contact-description">GitHub:</div>
-                        <a
-                          href="https://github.com/lulo93"
-                          class="contact-link"
-                          target="_blank"
-                          >@lulo93</a>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </li>
-          </ul>
-        </div>
+      <div class="center mb-2 mt-5">
+        <a href="#" id="submit-btn" class="btn btn-branding-outline mb-5"
+          >Submit</a
+        >
       </div>
-      <p class="center mt-5">Want to connect? Let's chat, add me or send me a message 👩🏽‍💻</p>
+    </div>
+    <div class="add-me mt-3 mb-5">
+      <p class="center mb-5">
+        Want to connect? Let's chat, add me or send me a message 👩🏽‍💻
+      </p>
+    </div>
     <footer>
       <div class="socialmedia-icons">
         <div class="container">
           <div class="row mb-4">
             <div class="col-3">
-              <a class="link-icons" href="mailto:luisafre01@gmail.com" target="_blank" title="Link to my email">
-                <i class=" fa fa-envelope icon fa-3x" aria-hidden="true"></i></a>
+              <a
+                class="link-icons"
+                href="mailto:luisafre01@gmail.com"
+                target="_blank"
+                title="Link to my email"
+              >
+                <i class="fa fa-envelope icon fa-3x" aria-hidden="true"></i
+              ></a>
             </div>
             <div class="col-3">
-              <a class="link-icons" href="https://www.linkedin.com/in/luisa-rua-estrada-58b016a7/" target="_blank" title="Link to my linkedin page">
-                <i class="fab fa-linkedin icon fa-3x" aria-hidden="true"></i></a>
-            </div>
-            <div class="col-3"> <a class="link-icons" href="https://github.com/lulo93" target="_blank" title="Link to my GitHub profile">
-                <i class="fab fa-brands fa-github icon fa-3x" aria-hidden="true"></i></a>
+              <a
+                class="link-icons"
+                href="https://www.linkedin.com/in/luisa-rua-estrada-58b016a7/"
+                target="_blank"
+                title="Link to my linkedin page"
+              >
+                <i class="fab fa-linkedin icon fa-3x" aria-hidden="true"></i
+              ></a>
             </div>
             <div class="col-3">
-              <a class="link-icons" href="https://twitter.com/luloestrada" target="_blank" title="Link to my Twitter profile">
-                <i class="fab fa-brands fa-twitter-square icon fa-3x" aria-hidden="true"></i></a>
+              <a
+                class="link-icons"
+                href="https://github.com/lulo93"
+                target="_blank"
+                title="Link to my GitHub profile"
+              >
+                <i
+                  class="fab fa-brands fa-github icon fa-3x"
+                  aria-hidden="true"
+                ></i
+              ></a>
+            </div>
+            <div class="col-3">
+              <a
+                class="link-icons"
+                href="https://twitter.com/luloestrada"
+                target="_blank"
+                title="Link to my Twitter profile"
+              >
+                <i
+                  class="fab fa-brands fa-twitter-square icon fa-3x"
+                  aria-hidden="true"
+                ></i
+              ></a>
             </div>
           </div>
         </div>
         <br />
-        <h6><a href="https://github.com/lulo93/portfolio-project">Open source code</a> by Luisa Rua Estrada</h6>
+        <h6>
+          <a href="https://github.com/lulo93/portfolio-project"
+            >Open source code</a
+          >
+          by Luisa Rua Estrada
+        </h6>
       </div>
     </footer>
+    <script src="java.js"></script>
   </body>
 </html>
