cleaning up code

--- a/about-me.html
+++ b/about-me.html
@@ -307,6 +307,6 @@
         </h6>
       </div>
     </footer>
-       <script src="java.js"></script>
+       <script src="src/java.js"></script>
   </body>
 </html>
