--- a/contact.html
+++ b/contact.html
@@ -56,17 +56,19 @@
     </div>
     <div class="container pt-2 pb-5">
       <div class="mt-5 mb-4">
-        <label for="exampleFormControlInput1" class="form-label">Email:</label>
+        <label for="exampleFormControlInput1" class="form-label"
+          >📧 Email :</label
+        >
         <input
           type="email"
           class="form-control"
           id="exampleFormControlInput1"
-          placeholder="....@email.com"
+          placeholder="youremail@email.com..."
         />
       </div>
       <div class="mb-4">
         <label for="exampleFormControlTextarea1" class="form-label"
-          >Message:</label
+          >💌 Message:</label
         >
         <textarea
           class="form-control"
@@ -147,6 +149,6 @@
         </h6>
       </div>
     </footer>
-    <script src="java.js"></script>
+    <script src="src/java.js"></script>
   </body>
 </html>
