--- a/index.html
+++ b/index.html
@@ -224,6 +224,6 @@
         <h6><a href="https://github.com/lulo93/portfolio-project">Open source code</a> by Luisa Rua Estrada</h6>
       </div>
     </footer>
-    <script src="java.js"></script>
+    <script src="src/java.js"></script>
   </body>
 </html>
