--- a/projects.html
+++ b/projects.html
@@ -70,7 +70,7 @@
             <a
               href="https://admiring-beaver-863ec4.netlify.app"
               target="blank"
-              class="btn btn-branding-outline"
+              class="btn btn-branding-outline mt-5"
               >Launch app</a
             >
           </div>
@@ -88,7 +88,7 @@
             <a
               href="https://focused-fermi-63188e.netlify.app"
               target="blank"
-              class="btn btn-branding-outline"
+              class="btn btn-branding-outline mt-5"
               >Launch app</a
             >
           </div>
@@ -111,7 +111,7 @@
             <a
               href="https://vibrant-pare-4e9887.netlify.app"
               target="blank"
-              class="btn btn-branding-outline"
+              class="btn btn-branding-outline mt-5"
               >Launch app</a
             >
           </div>
@@ -195,6 +195,6 @@
         </h6>
       </div>
     </footer>
-       <script src="java.js"></script>
+      <script src="src/java.js"></script>
   </body>
 </html>
