--- a/about-me.html
+++ b/about-me.html
@@ -64,7 +64,7 @@
             Software Development, one day my friend sent me a SheCodes ad on
             instagram and I haven't looked back since. Now, four months on, I am
             very close to graduating from the SheCodes Pro course and hopefully
-            achieving my career change in 2022!
+            achieving my career change in 2022! 
           </p>
         </div>
         <div class="col-lg-6 mt-5">
@@ -79,31 +79,33 @@
     </div>
       <div class="interests-hero center">
       <h2 class="mt-4 mb-5">What I'm Passionate About <i class="fa fa-solid fa-hand-holding-heart icon float end" aria-hidden="true"></i></h2>
-      
+      <div class="flex-wrapper">
        <ul>
          <li class="mb-3">
-      Investment & personal finance
+     <i class="fa fa-solid fa-fire icon float end" aria-hidden="true"></i> Investment & personal finance
     </li>
-    <li class="mb-3">Self-development</li>
-  <li class="mb-3">Dancing (Salsa & Samba)</li>
-<li class="mb-3">Gastronomy</li>
-<li class="mb-3">Languages</li>
-<li class="mb-3">Programming</li>
+    <li class="mb-3"><i class="fa fa-solid fa-fire icon float end" aria-hidden="true"></i> Self-development</li>
+  <li class="mb-3"><i class="fa fa-solid fa-fire icon float end" aria-hidden="true"></i> Dancing (Salsa & Samba)</li>
+<li class="mb-3"><i class="fa fa-solid fa-fire icon float end" aria-hidden="true"></i> Gastronomy</li>
+<li class="mb-3"><i class="fa fa-solid fa-fire icon float end" aria-hidden="true"></i> Languages</li>
+<li class="mb-3"><i class="fa fa-solid fa-fire icon float end" aria-hidden="true"></i> Programming</li>
 </ul> 
+</div>
 </div>
 </div>
 <div class="cert-hero center mt-5">
 <h2 class="mt-4 mb-5">Certifications <i class="fa fa-solid fa-graduation-cap icon float end" aria-hidden="true"></i></h2>
-   <ul><li class="mb-3">
-    <a href="https://www.shecodes.io/certificates/329ba8d6aeb3ad00b9ba4e961d710b9e">SheCodes Basics</a>
+   <div class="flex-wrapper">
+<ul><li class="mb-3">
+    <a href="https://www.shecodes.io/certificates/329ba8d6aeb3ad00b9ba4e961d710b9e"><i class="fa fa-solid fa-trophy icon float end" aria-hidden="true"></i> SheCodes Basics</a>
     </li>
-    <a href="https://www.shecodes.io/certificates/b49796a18b45374939149f708630a12e" target="blank"><li class="mb-3">SheCodes Plus</li></a>
-  <a href="#"><li class="mb-3">SheCodes Responsive</li></a>
-<li class="mb-3">Currently working towards React
-  <br/>
+    <a href="https://www.shecodes.io/certificates/b49796a18b45374939149f708630a12e" target="blank"><li class="mb-3"><i class="fa fa-solid fa-trophy icon float end" aria-hidden="true"></i> SheCodes Plus</li></a>
+  <a href="#"><li class="mb-3"><i class="fa fa-solid fa-trophy icon float end" aria-hidden="true"></i> SheCodes Responsive</li></a>
+<li class="mb-3"><i class="fa fa-solid fa-trophy icon float end" aria-hidden="true"></i> Currently working towards React
   (March 2022)
 </li>
 </ul>
+</div>
     </div>
     <div class="skills-competencies mt-5 mb-5">
       <h2 class="subtitle mb-5 mt-4">Skills and Competencies <i class="fa fa-regular fa-clipboard-check icon float end" aria-hidden="true"></i></h2>
