finishing touches on contact page

--- a/contact.html
+++ b/contact.html
@@ -56,8 +56,10 @@
     </div>
     <div class="container pt-2 pb-5">
       <div class="mt-5 mb-4">
-        <label for="exampleFormControlInput1" class="form-label"
-          >📧 Email :</label
+        <strong
+          ><label for="exampleFormControlInput1" class="form-label"
+            >Email 📧:</label
+          ></strong
         >
         <input
           type="email"
@@ -67,8 +69,10 @@
         />
       </div>
       <div class="mb-4">
-        <label for="exampleFormControlTextarea1" class="form-label"
-          >💌 Message:</label
+        <strong
+          ><label for="exampleFormControlTextarea1" class="form-label"
+            >Message 💌:</label
+          ></strong
         >
         <textarea
           class="form-control"
@@ -85,7 +89,12 @@
     </div>
     <div class="add-me mt-3 mb-5">
       <p class="center mb-5">
-        Want to connect? Let's chat, add me or send me a message 👩🏽‍💻
+        Adios amigos
+        <i
+          class="fa fa-solid fa-hand-sparkles icon float end"
+          aria-hidden="true"
+        ></i>
+        <br />Want to connect? Let's chat, add me or send me a message 👩🏽‍💻
       </p>
     </div>
     <footer>
