--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </div>
    </div>  
     <div class="hero">
-      <p>Hello World!</p>
+      <p>Hello World! I am</p>
 
       <div class="center"><h1 class="introduction mt-5 mb-5">Luisa Rua Estrada</h1></div>
 
