small link adjustments

--- a/about-me.html
+++ b/about-me.html
@@ -97,10 +97,10 @@
 <h2 class="mt-4 mb-5">Certifications <i class="fa fa-solid fa-graduation-cap icon float end" aria-hidden="true"></i></h2>
    <div class="flex-wrapper">
 <ul><li class="mb-3">
-    <a href="https://www.shecodes.io/certificates/329ba8d6aeb3ad00b9ba4e961d710b9e"><i class="fa fa-solid fa-trophy icon float end" aria-hidden="true"></i> SheCodes Basics</a>
+    <a href="https://www.shecodes.io/certificates/329ba8d6aeb3ad00b9ba4e961d710b9e" target="blank"><i class="fa fa-solid fa-trophy icon float end" aria-hidden="true"></i> SheCodes Basics</a>
     </li>
     <a href="https://www.shecodes.io/certificates/b49796a18b45374939149f708630a12e" target="blank"><li class="mb-3"><i class="fa fa-solid fa-trophy icon float end" aria-hidden="true"></i> SheCodes Plus</li></a>
-  <a href="https://www.shecodes.io/certificates/b3c1e6ab5e94f7642c94ff710f9692eb"><li class="mb-3"><i class="fa fa-solid fa-trophy icon float end" aria-hidden="true"></i> SheCodes Responsive</li></a>
+  <a href="https://www.shecodes.io/certificates/b3c1e6ab5e94f7642c94ff710f9692eb" target="blank"><li class="mb-3"><i class="fa fa-solid fa-trophy icon float end" aria-hidden="true"></i> SheCodes Responsive</li></a>
 <li class="mb-3"><i class="fa fa-solid fa-trophy icon float end" aria-hidden="true"></i> Currently working towards React
   (March 2022)
 </li>
