minor punctuation amendments

--- a/about-me.html
+++ b/about-me.html
@@ -54,7 +54,7 @@
         <div class="col-lg-6">
           <h1>About me</h1>
           <p id="intro-p" class="center mt-5 mb-5">
-            Hola! I'm Lu, a british Colombian living in London. I have been
+            Hola! I'm Lu, a British-Colombian living in London. I have been
             working in the Financial Services sector for over 5 years and as
             much as I have enjoyed my career in Wealth Management it was time
             for a change. I had developed a burning desire to learn new skills
