--- a/index.html
+++ b/index.html
@@ -92,6 +92,12 @@
             data-bs-slide-to="2"
             aria-label="Slide 3"
           ></button>
+           <button
+            type="button"
+            data-bs-target="#carouselExampleDark"
+            data-bs-slide-to="3"
+            aria-label="Slide 4"
+          ></button>
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
@@ -122,6 +128,16 @@
             />
             <div class="carousel-caption d-none d-md-block">
               <div class="slide-text"><h5>Responsive website</h5></div>
+            </div>
+          </div>
+           <div class="carousel-item">
+            <img
+              src="images/react-weather-app.png"
+              class="d-block w-100"
+              alt="React weather app"
+            />
+            <div class="carousel-caption d-none d-md-block">
+              <h5 class="slide-text">React weather app</h5>
             </div>
           </div>
         </div>
@@ -167,6 +183,7 @@
       <a href="about-me.html" class="btn btn-branding mt-5"
         >More about me</a
       >
+    
     </div>
     <footer>
       <div class="socialmedia-icons">
