added react weather app to projects page

--- a/projects.html
+++ b/projects.html
@@ -117,6 +117,26 @@
           </div>
         </div>
       </div>
+      <div class="row mb-5 mt-5">
+        <div class="col">
+          <div class="project-description">
+            <h2 class="mb-3">React Weather App</h2>
+            <p class="mb-3 text-muted">
+            Another weather app! One more React project to go, coming soon..
+
+            </p>
+            <a
+              href="https://goofy-murdock-61f2b5.netlify.app/"
+              target="blank"
+              class="btn btn-branding-outline mt-5"
+              >Launch app</a
+            >
+          </div>
+        </div>
+        <div class="col d-none d-lg-block">
+          <img src="images/react-weather-app.png" class="img-fluid" id="project-img" alt="" />
+        </div>
+      </div>
     </div>
     <div class="connected mt-5 center">
       <h2 class="mt-5 mb-5">Let's get connected</h2>
