Added React certificate and projects
also updated about me to reflect completion of my SheCodes Pro course

--- a/about-me.html
+++ b/about-me.html
@@ -62,8 +62,8 @@
             begin, someone very close to me insisted that Technology was the
             next best sector to learn about. I had always been curious about
             Software Development, one day my friend sent me a SheCodes ad on
-            instagram and I haven't looked back since. Now, four months on, I am
-            very close to graduating from the SheCodes Pro course and hopefully
+            instagram and I haven't looked back since. Now, five months on, I am
+            now a SheCodes Pro graduate with a junior developer skillset and one step closer to
             achieving my career change in 2022! 
           </p>
         </div>
@@ -101,9 +101,7 @@
     </li>
     <a href="https://www.shecodes.io/certificates/b49796a18b45374939149f708630a12e" target="blank"><li class="mb-3"><i class="fa fa-solid fa-trophy icon float end" aria-hidden="true"></i> SheCodes Plus</li></a>
   <a href="https://www.shecodes.io/certificates/b3c1e6ab5e94f7642c94ff710f9692eb" target="blank"><li class="mb-3"><i class="fa fa-solid fa-trophy icon float end" aria-hidden="true"></i> SheCodes Responsive</li></a>
-<li class="mb-3"><i class="fa fa-solid fa-trophy icon float end" aria-hidden="true"></i> Currently working towards React
-  (March 2022)
-</li>
+ <a href="https://www.shecodes.io/certificates/db93d235c0d4124ed33db06c7e36a859" target="blank"><li class="mb-3"><i class="fa fa-solid fa-trophy icon float end" aria-hidden="true"></i> SheCodes React</li></a>
 </ul>
 </div>
     </div>
@@ -226,7 +224,7 @@
                 title="React"
                 class="img-fluid"
               />
-              <h6 class="text-center mt-4"> Coming soon</h6>
+              <h6 class="text-center mt-4">React</h6>
             </div>
             </div>
           </div>
