--- a/projects.html
+++ b/projects.html
@@ -115,15 +115,13 @@
               >Launch app</a
             >
           </div>
-        </div>
-      </div>
+        </div>      
       <div class="row mb-5 mt-5">
         <div class="col">
           <div class="project-description">
             <h2 class="mb-3">React Weather App</h2>
             <p class="mb-3 text-muted">
-            Another weather app! One more React project to go, coming soon..
-
+            Another weather app! the first of two projects in the React workshop.
             </p>
             <a
               href="https://goofy-murdock-61f2b5.netlify.app/"
@@ -137,8 +135,25 @@
           <img src="images/react-weather-app.png" class="img-fluid" id="project-img" alt="" />
         </div>
       </div>
-    </div>
-    <div class="connected mt-5 center">
+         <div class="row mb-5 mt-5">
+        <div class="col d-none d-lg-block">
+          <img src="images/dictionary-app.png" class="img-fluid" id="project-img" alt="" />
+        </div>
+        <div class="col">
+          <div class="project-description">
+            <h2 class="mb-3">React Dictionary App</h2>
+            <p class="mb-3 text-muted">
+              The second and final React project, an interactive dictionary app using a dictionary API.
+            </p>
+            <a
+              href="https://kind-bell-cd11c0.netlify.app/"
+              target="blank"
+              class="btn btn-branding-outline mt-5"
+              >Launch app</a
+            >
+          </div>
+        </div>
+          <div class="connected mt-5 center">
       <h2 class="mt-5 mb-5">Let's get connected</h2>
       <p>
         I hope you have enjoyed looking at my projects throughout my SheCodes journey.
