--- a/index.html
+++ b/index.html
@@ -63,8 +63,7 @@
     </div> 
     </div>
         <h2 class="text-center mt-5 mb-5">A preview of my coding projects so far</h2>
-<p class="center mt-5 mb-5">Work created in SheCodes Basics, Plus and Responsive. 
-  <br /> React coming soon, stayed tuned!</p>
+<p class="center mt-5 mb-5">Work created in SheCodes Basics, Plus, Responsive and React!</p>
     <div class="project-carousel">
       <div
         id="carouselExampleDark"
@@ -97,6 +96,12 @@
             data-bs-target="#carouselExampleDark"
             data-bs-slide-to="3"
             aria-label="Slide 4"
+          ></button>
+          <button
+            type="button"
+            data-bs-target="#carouselExampleDark"
+            data-bs-slide-to="4"
+            aria-label="Slide 5"
           ></button>
         </div>
         <div class="carousel-inner">
@@ -138,6 +143,16 @@
             />
             <div class="carousel-caption d-none d-md-block">
               <h5 class="slide-text">React weather app</h5>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img
+              src="images/dictionary-app.png"
+              class="d-block w-100"
+              alt="React weather app"
+            />
+            <div class="carousel-caption d-none d-md-block">
+              <h5 class="slide-text">React dictionary app</h5>
             </div>
           </div>
         </div>
