minor update to project description

--- a/projects.html
+++ b/projects.html
@@ -144,7 +144,7 @@
           <div class="project-description">
             <h2 class="mb-3">React Dictionary App</h2>
             <p class="mb-3 text-muted">
-              The second and final React project, an interactive dictionary app using a dictionary API.
+              The second and final React project, an interactive dictionary app using a dictionary and images API.
             </p>
             <a
               href="https://kind-bell-cd11c0.netlify.app/"
