--- a/projects.html
+++ b/projects.html
@@ -105,8 +105,9 @@
           <div class="project-description">
             <h2 class="mb-3">Responsive Website</h2>
             <p class="mb-3 text-muted">
-              This is not one of my final projects for the Responsive workshop, this portfolio website  you are browsing now is!
-              However, before building this website, I made a basic responsive website about croissants using Bootstrap, CSS utilities, Flexbox and made it SEO friendly.
+              This is not one of my final projects for the Responsive workshop, this portfolio website you are browsing now was. However, this has now been
+               readapted into my very own portfolio website. Before building this website, I made a basic responsive website about croissants using Bootstrap, 
+               CSS utilities, Flexbox and made it SEO friendly.
             </p>
             <a
               href="https://vibrant-pare-4e9887.netlify.app"
@@ -122,7 +123,8 @@
           <div class="project-description">
             <h2 class="mb-3">React Weather App</h2>
             <p class="mb-3 text-muted">
-            Another weather app! the first of two projects in the React workshop.
+            Another weather app! the first of two projects in the React workshop. Though a little challenging at first it was great to discover that React
+             is  highly efficient for building apps as opposed to Javascript.
             </p>
             <a
               href="https://goofy-murdock-61f2b5.netlify.app/"
