--- a/projects.html
+++ b/projects.html
@@ -105,7 +105,7 @@
           <div class="project-description">
             <h2 class="mb-3">Responsive Website</h2>
             <p class="mb-3 text-muted">
-              This is not one of my final projects for the Responsive workshop, this portfolio website you are browsing now was. However, this has now been
+              This is not one of my final projects for the Responsive workshop, this portfolio website you are browsing now was, however, this has now been
                readapted into my very own portfolio website. Before building this website, I made a basic responsive website about croissants using Bootstrap, 
                CSS utilities, Flexbox and made it SEO friendly.
             </p>
