--- a/projects.html
+++ b/projects.html
@@ -124,7 +124,7 @@
             <h2 class="mb-3">React Weather App</h2>
             <p class="mb-3 text-muted">
             Another weather app! the first of two projects in the React workshop. Though a little challenging at first it was great to discover that React
-             is  highly efficient for building interactive apps as opposed to Javascript.
+             is highly efficient for building interactive apps and it is much easier to organise code which actually allows to track bugs much faster.
             </p>
             <a
               href="https://goofy-murdock-61f2b5.netlify.app/"
